--- a/blog/index.qmd
+++ b/blog/index.qmd
@@ -5,5 +5,6 @@ listing:
   type: default
   sort: "date desc"
   fields: [date, title, author, categories, reading-time, description, image]
+  image-align: left
   categories: true
 ---
