--- a/blog/posts/2026-01-27-remembering-yili-liu/index.qmd
+++ b/blog/posts/2026-01-27-remembering-yili-liu/index.qmd
@@ -6,21 +6,15 @@ categories: [News]
 image: images/yililiu.jpg
 ---
 
-:::: {.columns}
-::: {.column width="65%"}
+
+::: {.float-image}
+![](images/yililiu.jpg){width="40%" style="float: right; margin: 10px;"}
+:::
+
 It was with a heavy heart that I learned that my PhD advisor [Dr. Yili Liu has passed away](https://ioe.engin.umich.edu/2025/12/23/remembering-yili-liu/). 
 Yili was my PhD advisor at the University of Michigan from 2009 to 2015, who has made a fundamental impact on me as a researcher and as a person. 
 I remember in the early years of my PhD I was not used to our meetings in which Yili rarely gave me specific tasks, but rather, he kept asking me, what do *you* want to work on? what are *you* passionate about in *your* research? 
-I remember back then I was thinking to myself, it would be much easier if you just tell me what to do. 
-:::
-::: {.column width="35%"}
-![](images/yililiu.jpg){fig-align="right" width="270"}
-:::
-::::
-
-
-
-Until years later when I started my own academic journey as a faculty, I realized the important lessons Yili has taught me all along about following your passion in research and taking initiatives. 
+I remember back then I was thinking to myself, it would be much easier if you just tell me what to do. Until years later when I started my own academic journey as a faculty, I realized the important lessons Yili has taught me all along about following your passion in research and taking initiatives. 
 He directly inspired me to shift my research areas over the years and now around something I care deeply about - the safety of people walking and bicycling and how we can evolve from a car-dependent society.
 
 Yili was fun to work with. 
@@ -30,10 +24,10 @@ We ended up going to Palio on Main Street, so I guess I did okay. 
 
 :::: {.columns}
 ::: {.column}
-![](images/fred-yili-post-defense-1.jpg){height="330"}
+![](images/fred-yili-post-defense-1.jpg){width="95%"}
 :::
 ::: {.column}
-![](images/fred-yili-post-defense-2.jpg){height="330"}
+![](images/fred-yili-post-defense-2.jpg){width="90%"}
 :::
 Photos of Yili after Fred's PhD defense in 2015
 ::::
