--- a/facilities/drivingsim.qmd
+++ b/facilities/drivingsim.qmd
@@ -1,4 +1,6 @@
-# Virtual reality (VR) driving simulator
+---
+title: "Virtual reality (VR) driving simulator"
+---
 
 We have developed a high-fidelity VR driving simulator that could simulate driving in an immersive virtual environment.
 It allows studying driver behaviors, driver-bicyclist/pedestrian interactions in a safe, controlled, and replicable environment.
