--- a/facilities/cyclingsim.qmd
+++ b/facilities/cyclingsim.qmd
@@ -1,4 +1,6 @@
-# Virtual reality (VR) cycling simulator
+---
+title: "Virtual reality (VR) cycling simulator"
+---
 
 We have developed a high-fidelity VR cycling simulator that could simulate cycling in an immersive virtual environment.
 This simulator allows us to study driver-bicyclist interactions, cyclist behaviors and facility preferences, and among many other things in a safe, controlled, and replicable environment.
