--- a/people/index.qmd
+++ b/people/index.qmd
@@ -60,7 +60,7 @@ listing:
 :::{#masters-students}
 :::
 
-## Undergraduate Students
+<!-- ## Undergraduate Students
 
 :::{#undergrad-students}
-:::
+::: -->
