--- a/404.qmd
+++ b/404.qmd
@@ -1,5 +1,5 @@
 ---
-title: Page Not Found
+title: "Page Not Found"
 ---
 
 The page you requested cannot be found (perhaps it was moved or renamed).
