Update blog article

--- a/blog/posts/2026-01-27-remembering-yili-liu/index.qmd
+++ b/blog/posts/2026-01-27-remembering-yili-liu/index.qmd
@@ -45,3 +45,10 @@ It will be a forever regret of mine that I never got to invite him over to our p
 I always thought, we have time, and we will do it soon when we are less busy. 
 But sometimes we will never be able to. 
 I will forever be grateful that I got to know Yili and have him as an advisor, colleague, and a dear friend. 
+
+---
+
+P.S. A memorial for Dr. Yili Liu was held on January 27, 2026 at the north campus of the University of Michigan, Ann Arbor. Some photos at the event can be found below.
+
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/umioe/albums/72177720331923490" title="Professor Yili Liu Memorial"><img src="https://live.staticflickr.com/65535/55086359807_ca945d6807_c.jpg" width="100%" alt="Professor Yili Liu Memorial"/></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
