Bug fix on home page blog article title not shown.

--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ listing:
 include-in-header:
   text: |
     <style>
-      .title {
+      h1.title {
         display: none;
       }
     </style>
